src/test/ui/unique-object-noncopyable.stderr
error[E0599]: no method named `clone` found for type `std::boxed::Box<dyn Foo>` in the current scope
  --> $DIR/unique-object-noncopyable.rs:24:16
   |
LL |     let _z = y.clone();
   |                ^^^^^
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `std::boxed::Box<dyn Foo> : std::clone::Clone`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
